syntax = "proto3";

package juno.counter;

service CounterService {
    rpc incrementCounter(IncrementCounterRequest) returns (CounterResponse);
    rpc decrementCounter(DecrementCounterRequest) returns (CounterResponse);
    rpc getCounter(GetCounterRequest) returns (CounterResponse);
    rpc resetCounter(ResetCounterRequest) returns (CounterResponse);
}

message IncrementCounterRequest {
    string counter_id = 1;
    int64 amount = 2;
}

message DecrementCounterRequest {
    string counter_id = 1;
    int64 amount = 2;
}

message GetCounterRequest {
    string counter_id = 1;
}

message ResetCounterRequest {
    string counter_id = 1;
}

message CounterResponse {
    string counter_id = 1;
    int64 value = 2;
}